updatet package.json

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "playwright test --headed",
-    "report": "npx playwright show-report",
-    "autoCode": "npx playwright codegen http://13.53.168.89:8080/bank/login"
+    "report": "npx playwright show-report"
   },
   "keywords": [],
   "author": "",
